experiments/59/ba19c56e1cf6d01e6acce1bf405a57f19c340c/error
STDOUT:
ISelLowering.cpp:3362:20: error: declaration of ‘llvm::MachineFunction& VarArgsLoweringHelper::MachineFunction’ [-fpermissive]
   MachineFunction &MachineFunction;
                    ^~~~~~~~~~~~~~~
In file included from /root/llvm-compile-time-tracker/llvm-project/llvm/include/llvm/CodeGen/SelectionDAG.h:32:0,
                 from /root/llvm-compile-time-tracker/llvm-project/llvm/include/llvm/CodeGen/TargetLowering.h:35,
                 from /root/llvm-compile-time-tracker/llvm-project/llvm/lib/Target/X86/X86ISelLowering.h:17,
                 from /root/llvm-compile-time-tracker/llvm-project/llvm/lib/Target/X86/X86ISelLowering.cpp:14:
/root/llvm-compile-time-tracker/llvm-project/llvm/include/llvm/CodeGen/MachineFunction.h:224:7: error: changes meaning of ‘MachineFunction’ from ‘class llvm::MachineFunction’ [-fpermissive]
 class MachineFunction {
       ^~~~~~~~~~~~~~~
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Target/X86/X86ISelLowering.cpp:3363:19: error: declaration of ‘const llvm::Function& VarArgsLoweringHelper::Function’ [-fpermissive]
   const Function &Function;
                   ^~~~~~~~
In file included from /root/llvm-compile-time-tracker/llvm-project/llvm/include/llvm/Analysis/ProfileSummaryInfo.h:18:0,
                 from /root/llvm-compile-time-tracker/llvm-project/llvm/include/llvm/CodeGen/TargetLowering.h:31,
                 from /root/llvm-compile-time-tracker/llvm-project/llvm/lib/Target/X86/X86ISelLowering.h:17,
                 from /root/llvm-compile-time-tracker/llvm-project/llvm/lib/Target/X86/X86ISelLowering.cpp:14:
/root/llvm-compile-time-tracker/llvm-project/llvm/include/llvm/IR/Function.h:61:7: error: changes meaning of ‘Function’ from ‘class llvm::Function’ [-fpermissive]
 class Function : public GlobalObject, public ilist_node<Function> {
       ^~~~~~~~
[1874/2534] Building CXX object tools/clang/lib/Parse/CMakeFiles/obj.clangParse.dir/ParsePragma.cpp.o
ninja: build stopped: subcommand failed.


STDERR:
CMake Warning at CMakeLists.txt:6 (message):
  Your CMake version is 3.10.2.  Starting with LLVM 12.0.0, the minimum
  version of CMake required to build LLVM will become 3.13.4, and using an
  older CMake will become an error.  Please upgrade your CMake to at least
  3.13.4 now to avoid issues in the future!


-- Version: 0.0.0
-- Performing Test HAVE_GNU_POSIX_REGEX
-- Performing Test HAVE_GNU_POSIX_REGEX
-- Performing Test HAVE_GNU_POSIX_REGEX -- failed to compile
-- Performing Test HAVE_POSIX_REGEX
-- Performing Test HAVE_POSIX_REGEX
-- Performing Test HAVE_POSIX_REGEX -- success
-- Performing Test HAVE_STEADY_CLOCK
-- Performing Test HAVE_STEADY_CLOCK
-- Performing Test HAVE_STEADY_CLOCK -- success
Command exited with non-zero status 1
124.57user 20.46system 1:13.18elapsed 198%CPU (0avgtext+0avgdata 974832maxresident)k
8inputs+1239528outputs (46major+2570996minor)pagefaults 0swaps
